setup db, prisma orm in backend

--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -93,3 +93,11 @@
 .menu li:hover {
     color: rgb(255, 222, 89);
 }
+
+.active {
+    color: rgb(255, 222, 89);
+}
+
+.pending {
+    color: red;
+}
