--- a/client/src/components/Personality/Personality.module.css
+++ b/client/src/components/Personality/Personality.module.css
@@ -34,6 +34,7 @@
     display: flex;
     justify-content: center;
     margin-top: 60px;
+    padding-bottom: 40px;
 }
 
 .aboutContentText {
@@ -43,4 +44,74 @@
 .aboutContentText p {
     text-align: center;
     font-size: 20px;
+}
+
+.mbtiTest {
+    width: 100%;
+    background-color: rgb(40, 89, 182);
+    padding: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.mbtiTestContent {
+    display: flex;
+    height: 750px;
+}
+
+.mbtiTestContentText {
+    background-color: #fff;
+    width: 50%;
+    padding: 20px;
+    align-items: center;
+    display: flex;
+}
+
+.mbtiTestContentText h1 {
+    font-size: 46px;
+}
+
+.mbtiTestContentText a {
+    font-size: 16px;
+    margin-top: 40px;
+    font-weight: 600;
+}
+
+.mbtiTestContentTextBtn {
+    width: 162px;
+    height: 40px;
+    margin-top: 30px;
+}
+
+.mbtiTestContentTextBtn button {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: rgb(255, 222, 89);
+    color: inherit;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.mbtiTestContentTextBtn button:hover {
+    background-color: rgb(40, 89, 182);
+    color: #fff;
+    cursor: pointer;
+}
+
+.mbtiTestContentImg {
+    flex: 1;
+}
+
+.mbtiTestContentImg img {
+    width: 100%;
+    height: 100%;
+}
+
+.hollandTest {
+    width: 100%;
+    background-color: rgb(255, 222, 89);
+    padding: 50px;
+    display: flex;
+    justify-content: center;
 }
