--- a/client/src/components/CareerExperience/CareerExperience.module.css
+++ b/client/src/components/CareerExperience/CareerExperience.module.css
@@ -128,6 +128,11 @@
     width: 100%;
 }
 
+.footerCourseItemAvatarBox {
+    height: 106px;
+    width: 303px;
+}
+
 .footerCourseItemName {
     font-size: 18px;
     font-weight: 500;
@@ -139,6 +144,7 @@
 
 .footerCourseItemDescription {
     font-size: 16px;
+    font-weight: 400;
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
