--- a/client/src/components/Personality/MBTI/MBTITest.module.css
+++ b/client/src/components/Personality/MBTI/MBTITest.module.css
@@ -10,6 +10,23 @@
 
 .progress {
     margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.progressBar {
+    background-color: #ddd;
+    height: 10px;
+    width: 100%;
+    border-radius: 10px;
+    margin-left: 20px;
+}
+
+.progressBarFilter {
+    height: 100%;
+    border-radius: 10px;
+    background-color: rgb(40, 89, 182);
 }
 
 .question {
@@ -21,7 +38,7 @@
 }
 
 .question h1 {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .answer {
@@ -45,4 +62,32 @@
     width: 40px;
     height: 40px;
     cursor: pointer;
+}
+
+.btnNext {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.btnNext button {
+    margin-top: 20px;
+    width: 120px;
+    height: 40px;
+    border: none;
+    font-size: 20px;
+    color: inherit;
+    border-radius: 17px;
+    background: white;
+    box-shadow: 0px 0px 20px rgba(98, 85, 165, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding: 10px;
+    outline: none;
+}
+
+.btnNext button:hover {
+    background: rgb(239, 236, 236);
 }
