build home page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: tahoma, tahoma-w01-regular, tahoma-w02-regular,
+        tahoma-w10-regular, tahoma-w15--regular, tahoma-w99-regular, sans-serif;
     line-height: 1.5;
     font-weight: 400;
 
