--- a/client/src/components/OnlineInternShip/OnlineInternShip.module.css
+++ b/client/src/components/OnlineInternShip/OnlineInternShip.module.css
@@ -118,3 +118,12 @@
     width: 100%;
     background-color: rgb(40, 89, 182);
 }
+
+.jobHover {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.jobHover:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    cursor: pointer;
+}
