--- a/client/src/layouts/LayoutApp/LayoutApp.module.css
+++ b/client/src/layouts/LayoutApp/LayoutApp.module.css
@@ -1,3 +1,20 @@
+.container {
+    font-family: tahoma, tahoma-w01-regular, tahoma-w02-regular,
+        tahoma-w10-regular, tahoma-w15--regular, tahoma-w99-regular, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+
+    color-scheme: light dark;
+    color: rgb(40, 89, 182);
+    background-color: #fff;
+
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+}
+
 .header {
     width: 100%;
     display: flex;
