--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -210,6 +210,11 @@
     font-weight: 600;
 }
 
+.advertisementHeaderContentOnlineInternshipText button:hover {
+    cursor: pointer;
+    color: rgb(40, 89, 182);
+}
+
 /* //footer */
 .advertisementFooter {
     width: 100%;
@@ -322,6 +327,11 @@
     border: none;
     font-size: 18px;
     font-weight: 600;
+}
+
+.advertisementFooterContentOnlineInternshipText button:hover {
+    cursor: pointer;
+    color: rgb(40, 89, 182);
 }
 
 /* achievement */
