--- a/client/src/layouts/LayoutApp/LayoutApp.module.css
+++ b/client/src/layouts/LayoutApp/LayoutApp.module.css
@@ -25,7 +25,7 @@
 .content {
     width: 100%;
     min-height: calc(100vh - 165px);
-    position: relative;
+    /* position: relative; */
 }
 
 .footer {
