--- a/client/src/components/FAQs/FAQs.module.css
+++ b/client/src/components/FAQs/FAQs.module.css
@@ -28,3 +28,21 @@
     align-items: flex-end;
     font-size: 24px;
 }
+
+.faqList {
+    padding: 0 140px;
+    @media (max-width: em(992px)) {
+        padding: 10px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .footer {
+        padding: 0;
+    }
+
+    .title {
+        font-size: 16px;
+        text-align: center;
+    }
+}
