--- a/client/src/components/Footer/Footer.module.css
+++ b/client/src/components/Footer/Footer.module.css
@@ -1,4 +1,5 @@
 .container {
+    width: 100%;
     height: 530px;
     color: #fff;
     display: flex;
@@ -50,4 +51,22 @@
 
 .logo img {
     width: 100%;
+}
+
+@media screen and (max-width: 992px) {
+    .container {
+        height: 300px;
+    }
+
+    .information {
+        padding: 10px;
+    }
+
+    .contact h1 {
+        font-size: 20px;
+    }
+
+    .brand {
+        display: none;
+    }
 }
