--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -2,23 +2,28 @@
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.content {
     width: 100%;
 }
 
 .avatar {
     width: 100%;
     padding: 0 50px;
+    position: relative;
 }
 
 .avatar img {
     width: 100%;
+    object-fit: cover;
 }
 
 .slogan {
     width: 100%;
     text-align: center;
     position: absolute;
-    bottom: 0;
+    bottom: 50px;
     transform: translateX(-50%);
     left: 50%;
     display: flex;
@@ -36,6 +41,7 @@
     font-size: 45px;
     font-weight: 700;
     color: #fff;
+    text-align: center;
 }
 
 .sloganButton {
@@ -102,7 +108,6 @@
 
 .advertisementHeader {
     width: 100%;
-    height: 839px;
     display: flex;
     justify-content: center;
     padding: 0 50px;
@@ -117,7 +122,7 @@
 .advertisementHeaderContentCareerExperience {
     position: relative;
     width: 40%;
-    height: 100%;
+    height: 839px;
 }
 
 .advertisementHeaderContentCareerExperienceImg {
@@ -166,7 +171,7 @@
 
 .advertisementHeaderContentOnlineInternship {
     width: 60%;
-    height: 100%;
+    height: 839px;
     margin-left: 30px;
     position: relative;
 }
@@ -218,7 +223,6 @@
 /* //footer */
 .advertisementFooter {
     width: 100%;
-    height: 706px;
     display: flex;
     justify-content: center;
     padding: 0 50px;
@@ -234,7 +238,7 @@
 .advertisementFooterContentCareerExperience {
     position: relative;
     width: 60%;
-    height: 100%;
+    height: 706px;
 }
 
 .advertisementFooterContentCareerExperienceImg {
@@ -285,7 +289,7 @@
 
 .advertisementFooterContentOnlineInternship {
     width: 40%;
-    height: 100%;
+    height: 706px;
     margin-left: 30px;
     position: relative;
 }
@@ -409,4 +413,100 @@
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+@media screen and (max-width: 993px) {
+    .avatar {
+        padding: 0;
+    }
+
+    .slogan {
+        bottom: 10px;
+    }
+
+    .sloganButtonBox {
+        width: 200px;
+        height: 40px;
+    }
+
+    .sloganButtonBox button {
+        font-size: 18px;
+    }
+
+    .sloganText p:first-child {
+        font-size: 18px;
+    }
+
+    .sloganText p:last-child {
+        font-size: 18px;
+    }
+
+    .advertisementHeader {
+        padding: 0;
+    }
+
+    .advertisementFooter {
+        padding: 0;
+    }
+
+    .advertisementHeaderContent {
+        flex-wrap: wrap;
+    }
+
+    .advertisementHeaderContentCareerExperience {
+        width: 100%;
+    }
+
+    .advertisementHeaderContentOnlineInternship {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .advertisementFooterContent {
+        flex-wrap: wrap;
+    }
+
+    .advertisementFooterContentCareerExperience {
+        width: 100%;
+    }
+
+    .advertisementFooterContentOnlineInternship {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .achievementTitle {
+        font-size: 30px;
+    }
+
+    .achievementList {
+        flex-wrap: wrap;
+    }
+
+    .achievementItem {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .achievementItemDivide {
+        display: none;
+    }
+
+    .achievementItem h1 {
+        font-size: 40px;
+        text-align: center;
+    }
+
+    .achievementItem h2 {
+        font-size: 24px;
+    }
+
+    .feedback {
+        padding: 0;
+    }
+
+    .feedbackContent {
+        padding: 0;
+    }
 }
