--- a/client/src/components/OnlineInternShip/OnlineInternShip.module.css
+++ b/client/src/components/OnlineInternShip/OnlineInternShip.module.css
@@ -127,3 +127,28 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     cursor: pointer;
 }
+
+.comboBoxList {
+    width: 100%;
+    @media (max-width: em(992px)) {
+        flex-wrap: wrap;
+    }
+}
+
+.comboBoxItem {
+    width: 200px;
+    @media (max-width: em(992px)) {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .footer {
+        padding: 0;
+    }
+
+    .title {
+        font-size: 16px;
+        text-align: center;
+    }
+}
