--- a/client/src/components/OverviewCareerDetail/OverviewCareerDetail.module.css
+++ b/client/src/components/OverviewCareerDetail/OverviewCareerDetail.module.css
@@ -28,3 +28,14 @@
     align-items: flex-end;
     font-size: 24px;
 }
+
+@media screen and (max-width: 992px) {
+    .footer {
+        padding: 0;
+    }
+
+    .title {
+        font-size: 16px;
+        text-align: center;
+    }
+}
