--- a/client/src/components/Personality/Personality.module.css
+++ b/client/src/components/Personality/Personality.module.css
@@ -115,3 +115,23 @@
     display: flex;
     justify-content: center;
 }
+
+@media screen and (max-width: 992px) {
+    .footer {
+        padding: 0;
+    }
+
+    .title {
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .mbtiTestContentImg {
+        display: none;
+        width: 100%;
+    }
+
+    .mbtiTestContentText {
+        width: 100%;
+    }
+}
