--- a/client/src/layouts/AuthLayout/AuthLayout.module.css
+++ b/client/src/layouts/AuthLayout/AuthLayout.module.css
@@ -29,9 +29,20 @@
 
 .name {
     margin-left: 20px;
-    /* align-self: flex-end; */
+    align-self: flex-end;
 }
 
 .authentication {
     flex: 1;
+}
+
+@media screen and (max-width: 992px) {
+    .container {
+        flex-wrap: wrap;
+    }
+
+    .sidebar {
+        width: 100%;
+        height: 130px;
+    }
 }
