--- a/client/src/layouts/LayoutApp/LayoutApp.module.css
+++ b/client/src/layouts/LayoutApp/LayoutApp.module.css
@@ -32,3 +32,19 @@
     width: 100%;
     padding: 50px;
 }
+
+@media screen and (max-width: 992px) {
+    .header {
+        padding: 10px 10px;
+    }
+
+    .footer {
+        padding: 0;
+    }
+}
+
+@media screen and (min-width: 993px) {
+    .header {
+        height: 165px;
+    }
+}
